# graphics-math

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: color3.hpp  graphics-math.hpp  helper.hpp  matrix4x4.hpp  normal3.hpp  onb.hpp  point2.hpp  point3.hpp  transform.hpp  util.hpp  vec2.hpp  vec3 copy.hpp  vec3.hpp
src/: onb.cpp  transform.cpp
test/: CMakeLists.txt  helper-tests.cpp  matrix-tests.cpp  transformation-tests.cpp  utility-tests.cpp  vector-tests.cpp
